# mcga-threading

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: benchmark_utils.hpp  event_loop_delay_error.cpp  object_processing.cpp  simple_function.cpp
benchmarks/glog/: logging.h
examples/: intervals.cpp  move_only_object_processor.cpp  own_processor.cpp  reenqueue_processor.cpp
include/mcga/: threading.hpp
include/mcga/threading/: constructs.hpp  delayed_invocation.hpp  event_loop.hpp  event_loop_thread.hpp  executable.hpp  worker.hpp  worker_thread.hpp
include/mcga/threading/base/: delayed_queue_wrapper.hpp  delayed_task.hpp  disallow_copy_and_move.hpp  event_loop.hpp  execute_task_variants.hpp  immediate_queue_wrapper.hpp  loop_tick_duration.hpp  method_checks.hpp  opaque_enqueuer.hpp  single_producer_immediate_queue_wrapper.hpp  sp_immediate_queue_wrapper.hpp  thread_pool_wrapper.hpp  thread_wrapper.hpp  worker.hpp
include/mcga/threading/constructs/: event_loop_construct.hpp  event_loop_thread_construct.hpp  event_loop_thread_pool_construct.hpp  worker_construct.hpp  worker_thread_construct.hpp  worker_thread_pool_construct.hpp
include/mcga/threading/internal/: delayed_invocation.hpp  event_loop_construct.hpp  executable.hpp  loop_tick_duration.hpp  thread_pool_wrapper.hpp  thread_wrapper.hpp  worker_construct.hpp
include/mcga/threading/processors/: dispatcher_processor.hpp  function_processor.hpp  object_processor.hpp  stateful_function_processor.hpp  stateless_function_processor.hpp
src/: delayed_invocation.cpp  event_loop.cpp  event_loop_thread.cpp  worker.cpp  worker_thread.cpp
tests/: event_loop.cpp  event_loop_pool.cpp  event_loop_thread.cpp  rand_utils.hpp  thread_pool_wrapper.cpp  thread_wrapper.cpp  worker.cpp  worker_pool.cpp
tests/base/: thread_pool_wrapper.cpp  thread_wrapper.cpp
tests/constructs/: event_loop_thread.cpp  event_loop_thread_pool.cpp  worker_thread.cpp  worker_thread_pool.cpp
tests/testing_utils/: basic_processor.hpp  rand_utils.hpp
